--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block page_title %}
     Challenges
 {% endblock %}
 
+{% block css_files %}
+    <link rel="stylesheet" href="{% static 'challenges/includes/headers.css' %}">
+    <link rel="stylesheet" href="{% static 'challenges/index.css' %}">
+{% endblock %}
+
 {% block content %}
+    {% include "challenges/includes/navigation.html" %}
     <ul>
         {% for month in months %}
             <li>
